Can populate preference panel with file path. Now need to persist the info.

--- a/SDRVoiceKeyer/Base.lproj/Main.storyboard
+++ b/SDRVoiceKeyer/Base.lproj/Main.storyboard
@@ -891,7 +891,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="w7q-ep-LaR"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="1ym-mu-NC0"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="EOU-ld-SGE">
@@ -903,7 +903,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="j5D-Ra-7CB"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="otq-A3-5yD"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="RSn-ei-LhV">
@@ -915,7 +915,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="xKH-JH-JEg"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="ufw-YE-vQc"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="H0G-5m-HS3">
@@ -927,7 +927,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="Mvb-Mh-6uE"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="cVY-pV-4Qn"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dsb-bg-F48">
@@ -939,7 +939,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="bux-0G-ehC"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="8Fo-6B-Lrs"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="6" translatesAutoresizingMaskIntoConstraints="NO" id="lal-gb-dYJ">
@@ -951,7 +951,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="hW5-Jj-4jH"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="LTg-fD-S4T"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="STl-S3-Q7v">
@@ -963,7 +963,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="MmY-5u-eGe"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="gWj-lT-HRB"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="8" translatesAutoresizingMaskIntoConstraints="NO" id="of5-Ob-eMS">
@@ -975,7 +975,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="Q8D-31-XtR"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="dYI-GH-JRK"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="9" translatesAutoresizingMaskIntoConstraints="NO" id="pNY-xZ-1UA">
@@ -987,7 +987,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="55f-1h-wh7"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="YXG-cb-vxr"/>
                                         </connections>
                                     </button>
                                     <button verticalHuggingPriority="750" tag="10" translatesAutoresizingMaskIntoConstraints="NO" id="RV2-eT-uw1">
@@ -999,7 +999,7 @@
                                             <modifierMask key="keyEquivalentModifierMask" command="YES"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="voiceButtonClicked:" target="XfG-lQ-9wD" id="l6r-8S-Jd1"/>
+                                            <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="ZPM-gp-Kwt"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -1028,10 +1028,10 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
-                            <popUpButton verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="128-Xq-Kg3">
+                            <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="128-Xq-Kg3">
                                 <rect key="frame" x="70" y="17" width="106" height="26"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="101" id="tni-Vp-fuP"/>
+                                    <constraint firstAttribute="width" constant="101" id="E0e-R8-Kqi"/>
                                 </constraints>
                                 <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Rmb-UQ-U4Y" id="J0o-O3-Lp6">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
@@ -1045,11 +1045,8 @@
                                     </menu>
                                 </popUpButtonCell>
                             </popUpButton>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efa-Pq-wip">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="NO" translatesAutoresizingMaskIntoConstraints="NO" id="efa-Pq-wip">
                                 <rect key="frame" x="18" y="23" width="48" height="17"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="44" id="kbT-g4-Pzd"/>
-                                </constraints>
                                 <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Profile" id="x2e-mt-Cf3">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1141,15 +1138,16 @@
                                     </textField>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="fFr-p5-0kN" secondAttribute="trailing" constant="5" id="0wl-kd-dAg"/>
-                                    <constraint firstItem="sCC-OK-YIr" firstAttribute="trailing" secondItem="dju-vS-M1X" secondAttribute="trailing" id="FYt-TU-BOG"/>
-                                    <constraint firstItem="anM-1v-JsV" firstAttribute="trailing" secondItem="I9p-yv-tZj" secondAttribute="trailing" id="G8o-B5-QNY"/>
-                                    <constraint firstItem="I9p-yv-tZj" firstAttribute="trailing" secondItem="OsK-JT-HHC" secondAttribute="trailing" id="KAD-gu-Cjv"/>
-                                    <constraint firstItem="dPS-4Y-9wz" firstAttribute="trailing" secondItem="anM-1v-JsV" secondAttribute="trailing" id="Omb-KY-5uR"/>
-                                    <constraint firstItem="OsK-JT-HHC" firstAttribute="trailing" secondItem="9ef-f1-JhT" secondAttribute="trailing" id="VAu-gO-9sQ"/>
-                                    <constraint firstItem="dju-vS-M1X" firstAttribute="trailing" secondItem="suw-xJ-UQI" secondAttribute="trailing" id="VPJ-Fn-1yU"/>
-                                    <constraint firstItem="9ef-f1-JhT" firstAttribute="trailing" secondItem="sCC-OK-YIr" secondAttribute="trailing" id="v8K-2p-Kus"/>
-                                    <constraint firstItem="fFr-p5-0kN" firstAttribute="trailing" secondItem="dPS-4Y-9wz" secondAttribute="trailing" id="ybu-p0-rPJ"/>
+                                    <constraint firstItem="suw-xJ-UQI" firstAttribute="trailing" secondItem="P4L-Db-G9l" secondAttribute="trailing" id="DIq-e9-fDL"/>
+                                    <constraint firstItem="9ef-f1-JhT" firstAttribute="trailing" secondItem="sCC-OK-YIr" secondAttribute="trailing" id="NSx-dX-eSS"/>
+                                    <constraint firstItem="dPS-4Y-9wz" firstAttribute="trailing" secondItem="anM-1v-JsV" secondAttribute="trailing" id="NXR-ut-zb3"/>
+                                    <constraint firstItem="anM-1v-JsV" firstAttribute="trailing" secondItem="I9p-yv-tZj" secondAttribute="trailing" id="QcM-Sx-TLh"/>
+                                    <constraint firstItem="dju-vS-M1X" firstAttribute="trailing" secondItem="suw-xJ-UQI" secondAttribute="trailing" id="Wtk-ie-aJj"/>
+                                    <constraint firstItem="I9p-yv-tZj" firstAttribute="trailing" secondItem="OsK-JT-HHC" secondAttribute="trailing" id="akK-V2-Ps5"/>
+                                    <constraint firstItem="OsK-JT-HHC" firstAttribute="trailing" secondItem="9ef-f1-JhT" secondAttribute="trailing" id="bVQ-Tc-tIb"/>
+                                    <constraint firstItem="fFr-p5-0kN" firstAttribute="trailing" secondItem="dPS-4Y-9wz" secondAttribute="trailing" id="lOt-Nz-fMx"/>
+                                    <constraint firstItem="sCC-OK-YIr" firstAttribute="trailing" secondItem="dju-vS-M1X" secondAttribute="trailing" id="vwx-hR-QXI"/>
+                                    <constraint firstAttribute="trailing" secondItem="fFr-p5-0kN" secondAttribute="trailing" constant="5" id="z97-zB-sGA"/>
                                 </constraints>
                                 <visibilityPriorities>
                                     <integer value="1000"/>
@@ -1176,30 +1174,38 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
-                            <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sPn-rB-RYG">
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sPn-rB-RYG">
                                 <rect key="frame" x="301" y="12" width="81" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="69" id="OYV-N4-5Fg"/>
+                                </constraints>
                                 <buttonCell key="cell" type="push" title="Ok" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="BUw-Fw-0Y4">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
+                                    <connections>
+                                        <action selector="buttonOk:" target="3zi-E8-UUr" id="QLK-dV-sIQ"/>
+                                    </connections>
                                 </buttonCell>
-                                <connections>
-                                    <action selector="buttonOk:" target="3zi-E8-UUr" id="v0f-te-uxi"/>
-                                </connections>
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="T09-ER-pbr" firstAttribute="leading" secondItem="efa-Pq-wip" secondAttribute="leading" id="0v5-qJ-w3c"/>
-                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="leading" secondItem="3gJ-RU-icY" secondAttribute="leading" constant="20" symbolic="YES" id="9s5-dC-XVx"/>
-                            <constraint firstItem="128-Xq-Kg3" firstAttribute="leading" secondItem="efa-Pq-wip" secondAttribute="trailing" id="LLZ-c0-vDF"/>
-                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="top" secondItem="3gJ-RU-icY" secondAttribute="top" constant="20" symbolic="YES" id="MGw-AC-GE4"/>
-                            <constraint firstAttribute="bottom" secondItem="128-Xq-Kg3" secondAttribute="bottom" constant="20" symbolic="YES" id="Nwc-ww-vhR"/>
-                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="top" secondItem="T09-ER-pbr" secondAttribute="top" id="e9B-Zj-dr6"/>
-                            <constraint firstItem="efa-Pq-wip" firstAttribute="top" secondItem="128-Xq-Kg3" secondAttribute="top" id="lI9-2e-W73"/>
-                            <constraint firstAttribute="trailing" secondItem="T09-ER-pbr" secondAttribute="trailing" constant="20" symbolic="YES" id="wwi-1u-35r"/>
-                            <constraint firstItem="T09-ER-pbr" firstAttribute="leading" secondItem="MPB-Oa-nvd" secondAttribute="trailing" constant="8" symbolic="YES" id="zFc-VF-lSy"/>
+                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="leading" secondItem="3gJ-RU-icY" secondAttribute="leading" constant="20" symbolic="YES" id="1Hg-PS-wKv"/>
+                            <constraint firstAttribute="bottom" secondItem="128-Xq-Kg3" secondAttribute="bottom" constant="20" symbolic="YES" id="Gvu-av-YZI"/>
+                            <constraint firstItem="efa-Pq-wip" firstAttribute="top" secondItem="sPn-rB-RYG" secondAttribute="top" id="MQZ-rd-fAA"/>
+                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="centerX" secondItem="efa-Pq-wip" secondAttribute="centerX" id="SDv-0l-HKS"/>
+                            <constraint firstItem="T09-ER-pbr" firstAttribute="trailing" secondItem="sPn-rB-RYG" secondAttribute="trailing" id="Slu-eN-S0L"/>
+                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="top" secondItem="T09-ER-pbr" secondAttribute="top" id="UEq-Wx-nMt"/>
+                            <constraint firstAttribute="trailing" secondItem="T09-ER-pbr" secondAttribute="trailing" constant="20" symbolic="YES" id="Vrt-Sk-cdu"/>
+                            <constraint firstItem="efa-Pq-wip" firstAttribute="baseline" secondItem="128-Xq-Kg3" secondAttribute="baseline" id="WJt-He-ql9"/>
+                            <constraint firstItem="128-Xq-Kg3" firstAttribute="leading" secondItem="efa-Pq-wip" secondAttribute="trailing" constant="8" symbolic="YES" id="Z1p-SI-jaV"/>
+                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="leading" secondItem="efa-Pq-wip" secondAttribute="leading" id="Zhn-8I-v33"/>
+                            <constraint firstItem="MPB-Oa-nvd" firstAttribute="top" secondItem="3gJ-RU-icY" secondAttribute="top" constant="20" symbolic="YES" id="h7H-cz-Br9"/>
+                            <constraint firstItem="T09-ER-pbr" firstAttribute="leading" secondItem="MPB-Oa-nvd" secondAttribute="trailing" constant="8" symbolic="YES" id="nZ8-VM-T0i"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textFilePath" destination="fFr-p5-0kN" id="j9l-M4-n9Q"/>
+                    </connections>
                 </viewController>
                 <customObject id="bqW-yH-LeM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
