--- a/SDRVoiceKeyer/Base.lproj/Main.storyboard
+++ b/SDRVoiceKeyer/Base.lproj/Main.storyboard
@@ -882,7 +882,7 @@
                             <stackView distribution="fill" orientation="vertical" alignment="centerX" horizontalStackHuggingPriority="249.99998474121094" verticalStackHuggingPriority="249.99998474121094" detachesHiddenViews="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MPB-Oa-nvd">
                                 <rect key="frame" x="20" y="55" width="43" height="282"/>
                                 <subviews>
-                                    <button verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="QUV-QA-YW7">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="1" translatesAutoresizingMaskIntoConstraints="NO" id="QUV-QA-YW7">
                                         <rect key="frame" x="-1.5" y="254" width="46" height="32"/>
                                         <buttonCell key="cell" type="push" title="1" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="C1E-M0-GzE">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -894,7 +894,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="1ym-mu-NC0"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="EOU-ld-SGE">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="EOU-ld-SGE">
                                         <rect key="frame" x="-2.5" y="225" width="48" height="32"/>
                                         <buttonCell key="cell" type="push" title="2" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="7Ih-8K-YaP">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -906,7 +906,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="otq-A3-5yD"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="RSn-ei-LhV">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="3" translatesAutoresizingMaskIntoConstraints="NO" id="RSn-ei-LhV">
                                         <rect key="frame" x="-3" y="196" width="49" height="32"/>
                                         <buttonCell key="cell" type="push" title="3" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kaQ-Sl-St7">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -918,7 +918,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="ufw-YE-vQc"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="H0G-5m-HS3">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="4" translatesAutoresizingMaskIntoConstraints="NO" id="H0G-5m-HS3">
                                         <rect key="frame" x="-3" y="167" width="49" height="32"/>
                                         <buttonCell key="cell" type="push" title="4" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Efq-ae-MWS">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -930,7 +930,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="cVY-pV-4Qn"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dsb-bg-F48">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dsb-bg-F48">
                                         <rect key="frame" x="-2.5" y="138" width="48" height="32"/>
                                         <buttonCell key="cell" type="push" title="5" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Xvl-jl-jWW">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -942,7 +942,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="8Fo-6B-Lrs"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="6" translatesAutoresizingMaskIntoConstraints="NO" id="lal-gb-dYJ">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="6" translatesAutoresizingMaskIntoConstraints="NO" id="lal-gb-dYJ">
                                         <rect key="frame" x="-3" y="109" width="49" height="32"/>
                                         <buttonCell key="cell" type="push" title="6" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="SI8-Av-r84">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -954,7 +954,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="LTg-fD-S4T"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="STl-S3-Q7v">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="7" translatesAutoresizingMaskIntoConstraints="NO" id="STl-S3-Q7v">
                                         <rect key="frame" x="-2.5" y="80" width="48" height="32"/>
                                         <buttonCell key="cell" type="push" title="7" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="8ik-rt-tlV">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -966,7 +966,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="gWj-lT-HRB"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="8" translatesAutoresizingMaskIntoConstraints="NO" id="of5-Ob-eMS">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="8" translatesAutoresizingMaskIntoConstraints="NO" id="of5-Ob-eMS">
                                         <rect key="frame" x="-3" y="51" width="49" height="32"/>
                                         <buttonCell key="cell" type="push" title="8" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ner-p0-X1g">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -978,7 +978,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="dYI-GH-JRK"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="9" translatesAutoresizingMaskIntoConstraints="NO" id="pNY-xZ-1UA">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="9" translatesAutoresizingMaskIntoConstraints="NO" id="pNY-xZ-1UA">
                                         <rect key="frame" x="-3" y="22" width="49" height="32"/>
                                         <buttonCell key="cell" type="push" title="9" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="mow-f4-GCt">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -990,7 +990,7 @@
                                             <action selector="loadFileNameClicked:" target="3zi-E8-UUr" id="YXG-cb-vxr"/>
                                         </connections>
                                     </button>
-                                    <button verticalHuggingPriority="750" tag="10" translatesAutoresizingMaskIntoConstraints="NO" id="RV2-eT-uw1">
+                                    <button toolTip="Select the audio file for this position." verticalHuggingPriority="750" tag="10" translatesAutoresizingMaskIntoConstraints="NO" id="RV2-eT-uw1">
                                         <rect key="frame" x="-6" y="-7" width="55" height="32"/>
                                         <buttonCell key="cell" type="push" title="10" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="I1M-AG-Mq9">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
@@ -1028,17 +1028,17 @@
                                     <real value="3.4028234663852886e+38"/>
                                 </customSpacing>
                             </stackView>
-                            <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="128-Xq-Kg3">
+                            <popUpButton identifier="profileSelectorButton" toolTip="Select the profile to view or modify." verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="128-Xq-Kg3">
                                 <rect key="frame" x="70" y="17" width="106" height="26"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="101" id="E0e-R8-Kqi"/>
                                 </constraints>
-                                <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Rmb-UQ-U4Y" id="J0o-O3-Lp6">
+                                <popUpButtonCell key="cell" type="push" title="W6OP DX" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Rmb-UQ-U4Y" id="J0o-O3-Lp6">
                                     <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="menu"/>
                                     <menu key="menu" id="lXl-EC-l7s">
                                         <items>
-                                            <menuItem title="Item 1" state="on" id="Rmb-UQ-U4Y"/>
+                                            <menuItem title="W6OP DX" state="on" id="Rmb-UQ-U4Y"/>
                                             <menuItem title="Item 2" id="NgO-GF-4hV"/>
                                             <menuItem title="Item 3" id="1Vj-hh-WmK"/>
                                         </items>
@@ -1203,9 +1203,6 @@
                             <constraint firstItem="T09-ER-pbr" firstAttribute="leading" secondItem="MPB-Oa-nvd" secondAttribute="trailing" constant="8" symbolic="YES" id="nZ8-VM-T0i"/>
                         </constraints>
                     </view>
-                    <connections>
-                        <outlet property="textFilePath" destination="fFr-p5-0kN" id="j9l-M4-n9Q"/>
-                    </connections>
                 </viewController>
                 <customObject id="bqW-yH-LeM" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
